# rust_router

./: Cargo.toml
public/: index.html
public/angular/: index.html
public/react/: index.html
src/: main.rs
