[package]

name = "hello_world_router"
version = "0.0.1"
authors = [ "Casey Billman <caseybillman@gmail.com>" ]

[dependencies.iron]
version = "*"

[dependencies.time]
version = "*"

[dependencies.router]
version = "*"

[dependencies.staticfile]
version = "*"

[dependencies.mount]
version = "*"

[dependencies]
juniper = { version = "0.7.0", features = ["iron-handlers"] }

[dependencies]
chrono = "0.3"

#[dependencies.bodyparser]
#git = "https://github.com/iron/body-parser.git"